# status_board

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  docker-compose.yml  services.json
src/: checker.rs  config.rs  db.rs  main.rs  routes.rs  state.rs  telegram.rs
templates/: index.html
